ensure alignment of items of page in new view

--- a/client/src/components/Page.css
+++ b/client/src/components/Page.css
@@ -79,6 +79,7 @@
 /* EDITABLE  */
 .editable-div {
   outline: none;
+  padding-right: 1.5rem;
   /* border-right: 1px solid black; */
   border-left: 1px solid black;
   /* background-color: rgba(224, 224, 224, 0.5); */
